[Misc] Fix various SonarCloud issues (unused field, collapsible if, Collectors.toList)
Fix three SonarCloud issues:
* java:S1068 - remove the unused private "currentLocaleParameters" field in
  DocumentInstanceOutputFilterStream
* java:S1066 - merge a collapsible nested "if" in DefaultIOService
* java:S6204 - replace Stream.collect(Collectors.toList()) with Stream.toList() in
  R180600000XWIKI20699DataMigration

Co-Authored-By: Vincent Massol <vincent@massol.net>